outputs/main/reevo_bpp_online_2025-08-07_21-55-44/problem_iter6_response7.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 78
    exact_fit_mask = feasible & np.isclose(slack, 0.0, atol=atol=atol)
                                                                ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/SLOC.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 78
    exact_fit_mask = feasible & np.isclose(slack, 0.0, atol=atol=atol)
                                                                ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/cyclomatic_complexity.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 78
    exact_fit_mask = feasible & np.isclose(slack, 0.0, atol=atol=atol)
                                                                ^
SyntaxError: invalid syntax
